Removed spacing on bottom, fixed navbar issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,8 @@ h3 {
   margin-top: 120px;
   width: 50%;
   height: auto;
+  position: absolute;
+  top: 15%;
 }
 
 
@@ -36,6 +38,8 @@ h3 {
 .servicestatement {
   width: 60%;
   margin-left: 30px;
+  position: absolute;
+  top: 45%;
 }
 
 .mountain {
@@ -175,6 +179,7 @@ p {
 .navbar-custom {
   background-color: #3E3C55;
   text-align: center;
+  z-index: 1000;
 }
 
 .collapse.navbar-collapse {
